python/testData/quickFixes/PyAddImportQuickFixTest/packagesFromPythonSkeletonsNotSuggested/main.py
<error descr="Unresolved reference 'django'">dj<caret>ango</error>.settings